# Jugglebot

./: .gitignore  CAN bus info  ODrive Notes.txt  README.md  odrive_v3_config.json
Ball Butler/: .$Rough Circuit Diagram.drawio.bkp  Circuit Diagram.drawio  ball_butler_spacemouse.py  eaglepower_config.json  simulating_throw_types.py  testing_spring_throw.py  yaw_inverse_kinematics.py
ODrive config Files/: odrive_pro_config.json  odrive_pro_hand_config.json  odrive_s1_bb_hand_config.json
core/: JBV4_control.py  can_handler.py  hand_path_creator.py  moving_average_filter.py  odrive_config.json  (+3 more)
ros_ws/src/jugglebot/: package.xml  setup.cfg  setup.py
ros_ws/src/jugglebot/Teensy_code/: Teensy_code.ino  Trajectory.h
ros_ws/src/jugglebot/can_sniffer_Arduino_code/: can_sniffer_Arduino_code.ino
ros_ws/src/jugglebot/jugglebot/: ball_butler_node.py  ball_butler_states.py  ball_butler_volley_testing_node.py  ball_manager_node.py  ball_prediction_node.py  ball_tracker.py  calibrate_platform_node.py  calibrate_platform_pattern_generator.py  can_bus_handler_node.py  can_handler.py  can_interface.py  can_interface_node.py  can_interface_unit_tests.py  catch_a_ball_node.py  catch_dropped_ball_node.py  catch_thrown_ball_node.py  hand_ik.py  hand_state_manager.py  hand_telemetry_recorder_node.py  hand_testing_node.py  hand_trajectory_generator.py  hand_trajectory_transmitter_node.py  hoop_sinker_node.py  juggling_path_creator.py  kalman_filter.py  landing_analysis_node.py  level_platform_node.py  mocap_interface.py  mocap_interface_node.py  mocap_visualizer_node.py  node_template.py  pattern_creator.py  platform_alignment_node.py  platform_calibration_node.py  platform_plotter.py  platform_pose_command_node.py  pose_correction_ff_class.py  pose_correction_node.py  robot_geometry.py  ruckig_trajectory_generator.py  (+13 more)
ros_ws/src/jugglebot/launch/: jugglebot_launch.py  jugglebot_launch_basic.py
ros_ws/src/jugglebot/resources/: 0.35s_100Hz_throw.csv  0.3s_100Hz_throw.csv  0.5s_100Hz_throw.csv  0.5s_200Hz_throw.csv  0.5s_300Hz_throw.csv  0.5s_400Hz_throw.csv  0.5s_500Hz_throw.csv  0.6s_500Hz_throw.csv  0.7s_500Hz_catch_only.csv  0.7s_500Hz_throw.csv  0.7s_500Hz_throw_only.csv  0.8s_500Hz_throw.csv  0.9s_500Hz_throw.csv  1.0s_100Hz_throw.csv  1.0s_500Hz_throw.csv  HandTrajectoryGenerator.py  HandTrajectoryPlotter.py  ODrive_CAN.dbc  analyse_angle_calibration_results.py  angle_calibration_data.csv  angle_calibration_data_2.csv  angled_origin_calibration_144.joblib  angled_origin_calibration_49.joblib  ball_butler_config.json  calibration_kdtree.joblib
(+379 files in other folders)
