<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jugglebot</name>
  <version>1.0.0</version>
  <description>v1 of (proper) Jugglebot code. Now with a state machine!</description>
  <maintainer email="harrisonlow.jugglebot@gmail.com">harrison low</maintainer>
  <license>MIT Licence</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>jugglebot_interfaces</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>yasmin_ros</exec_depend>
  <exec_depend>qtm_rt</exec_depend>
  <exec_depend>sklearn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
